--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,11 +1,20 @@
 <?php echo $this->doctype(); ?>
 <html>
     <head>
-    	<?php
-    	echo $this->headMeta();
-    	?>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.min.css">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script src="/bootstrap/js/bootstrap.min.js"></script>
+        <?php
+      	echo $this->headMeta();
+        echo $this->headTitle();
+      	echo $this->headLink();
+      	echo $this->headStyle();
+        ?>
     </head>
     <body>
         <?php echo $this->layout()->content; ?>
+        <?php echo $this->headScript(); ?>
     </body>
 </html>
